--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div>
-        <p>Hola Mundo</p>
+        <p>Hola Mundo</p><br>
+        <p>:)</p>
     </div>
 </body>
 </html>
